--- a/src/client/styles/components/_program.scss
+++ b/src/client/styles/components/_program.scss
@@ -1,17 +1,20 @@
-.program {
-    background-color: $white;
-    margin: 20px;
-    border-radius: 5px;
-    
-    &__image {
-        background-color: $grey1;
+.program-list {
+    list-style-type: none;
+    .program {
+        background-color: $white;
         margin: 20px;
-        img {
-            width: 250px;
+        border-radius: 5px;
+        
+        &__image {
+            background-color: $grey1;
+            margin: 20px;
+            img {
+                width: 250px;
+            }
         }
-    }
-    &__info {
-        padding: 20px;
+        &__info {
+            padding: 20px;
+        }
     }
 }
 
@@ -26,7 +29,7 @@
             display: inline-block;
             margin: 10px;
             button.active {
-                background-color: green;
+                background-color: green !important;
             }
         }
     }
@@ -43,7 +46,7 @@
             display: inline-block;
             margin: 10px;
             button.active {
-                background-color: green;
+                background-color: green !important;
             }
         }
     }
